--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,8 @@
         </dependency>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc4</artifactId>
+            <artifactId>jdbc4</artifactId>
             <version>4.0</version>
-            <scope>jar</scope>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
